--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "stellars_jupyterlab_fixes"
-version = "1.0.5"
+version = "1.0.6"
 description = "Metapackage aggregating all Stellars JupyterLab fixes"
 readme = "README.md"
 license = {text = "MIT"}
@@ -30,6 +30,7 @@ dependencies = [
     "jupyterlab_markdown_switch_tab_scrolling_fix",
     "jupyterlab_markdown_viewer_toc_fix",
     "jupyterlab_server_proxy_launcher_fix",
+    "jupyterlab_terminal_cpr_escape_fix",
 ]
 
 [project.urls]
